syntax = "proto3";

option java_multiple_files = true;
option java_package = "shopping.cart.proto";

package shoppingcart;

// gRPC definition for ShoppingCartService


service ShoppingCartService {


    rpc AddItem (AddItemRequest) returns (Cart) {}
    rpc UpdateItem (UpdateItemRequest) returns (Cart) {}
    
    rpc Checkout (CheckoutRequest) returns (Cart) {}
    rpc GetCart (GetCartRequest) returns (Cart) {}

    rpc ItemStream (ItemStreamRequest) returns (stream CartEvent) {}
    rpc ItemStreamJournal (ItemStreamJournalRequest) returns (stream CartEvent) {}

}



message AddItemRequest {
    string cartId = 1;
    string itemId = 2;
    int32 quantity = 3;
}

message UpdateItemRequest {
    string cartId = 1;
    string itemId = 2;
    int32 quantity = 3;
}


message CheckoutRequest {
    string cartId = 1;
}

message GetCartRequest {
    string cartId = 1;
}

message Cart {
    repeated Item items = 1;
    bool checkedOut = 2;
}

message Item {
    string itemId = 1;
    int32 quantity = 2;
}

message ItemStreamJournalRequest {
    string callerId = 1;
    repeated ItemStreamJournalCartSeqNum cartSeqNum = 2;

}

message ItemStreamJournalCartSeqNum {
    string cartId = 1;
    int64 eventSeqNum = 2;
}


message ItemStreamRequest {
    string callerId = 1;
}
message CartEvent {
    string cartId = 1;
    int64 eventSeqNum = 2;
    oneof event {
        CartItemAdded itemAdded = 3;
        CartItemQuantityAdjusted itemQuantityAdjusted = 4;
        CartItemRemoved itemRemoved = 5;
        CartCheckedOut cartCheckedOut = 6;
    }
}

message CartItemAdded {
    string itemId = 1;
    int32 quantity = 2;
}
message CartItemQuantityAdjusted {
    string itemId = 1;
    int32 oldQuantity = 2;
    int32 newQuantity = 3;
}
message CartItemRemoved {
    string itemId = 1;
    int32 oldQuantity = 2;
}
message CartCheckedOut {
    int64 eventTime = 1;
}
